--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
 
 </head>
-<body>
+<body">
   <app-root></app-root>
 </body>
 </html>
